优化项目体积，提升加载速度

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title><%= htmlWebpackPlugin.options.isProdEnv ? "":"dev-" %>电商后台管理系统</title>
+    <%if(htmlWebpackPlugin.options.isProdEnv){%>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <!-- nprogress css -->
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/nprogress/0.2.0/nprogress.min.css" />
+    <!-- vue-quill-editor css -->
+    <link href="https://cdn.quilljs.com/1.3.4/quill.core.css" rel="stylesheet" />
+    <link href="https://cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet" />
+    <link href="https://cdn.quilljs.com/1.3.4/quill.bubble.css" rel="stylesheet" />
+    <!-- element-ui css -->
+    <!-- <link href="https://cdn.bootcdn.net/ajax/libs/element-ui/2.13.2/theme-chalk/index.css" rel="stylesheet" /> -->
+    <!-- <link href="https://cdn.bootcdn.net/ajax/libs/element-ui/2.8.2/theme-chalk/index.css" rel="stylesheet" /> -->
+    <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/element-ui/2.13.2/theme-chalk/index.css" /> -->
+    <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/element-ui/2.8.2/theme-chalk/index.css" /> -->
+    <!-- <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css" /> -->
+    <%}%>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>
+        We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.
+      </strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <%if(htmlWebpackPlugin.options.isProdEnv){%>
+    <!-- vue js -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.11/vue.min.js"></script>
+    <!-- vue-router js -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/vue-router/3.1.6/vue-router.min.js"></script>
+    <!-- axios js -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <!-- element-ui js -->
+    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.13.2/index.js"></script> -->
+    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.8.2/index.js"></script> -->
+    <!-- <script src="https://cdn.staticfile.org/element-ui/2.13.2/index.js"></script> -->
+    <!-- <script src="https://cdn.staticfile.org/element-ui/2.8.2/index.js"></script> -->
+    <!-- <script src="https://unpkg.com/element-ui/lib/index.js"></script> -->
+    <!-- lodash js -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
+    <!-- echarts js -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/echarts/4.8.0/echarts.min.js"></script>
+    <!-- nprogress js -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/nprogress/0.2.0/nprogress.min.js"></script>
+    <!-- Include the Quill library -->
+    <script src="https://cdn.quilljs.com/1.3.4/quill.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <!-- Quill JS Vue -->
+    <script src="https://cdn.jsdelivr.net/npm/vue-quill-editor@3.0.6/dist/vue-quill-editor.js"></script>
+    <%}%>
   </body>
 </html>
